--- a/playground/index.html
+++ b/playground/index.html
@@ -5207,44 +5207,47 @@ var $zwilias$elm_rosetree$Tree$Zipper$fromTree = function (t) {
 };
 var $elm$core$Platform$Cmd$batch = _Platform_batch;
 var $elm$core$Platform$Cmd$none = $elm$core$Platform$Cmd$batch(_List_Nil);
-var $author$project$Main$Identifier = function (a) {
-	return {$: 'Identifier', a: a};
+var $author$project$Main$Assignment = {$: 'Assignment'};
+var $author$project$Main$Id = function (a) {
+	return {$: 'Id', a: a};
 };
 var $author$project$Main$If = {$: 'If'};
 var $author$project$Main$Label = F2(
 	function (value, selected) {
 		return {selected: selected, value: value};
 	});
-var $elm$core$Basics$composeL = F3(
-	function (g, f, x) {
-		return g(
-			f(x));
-	});
 var $zwilias$elm_rosetree$Tree$Tree = F2(
 	function (a, b) {
 		return {$: 'Tree', a: a, b: b};
 	});
-var $zwilias$elm_rosetree$Tree$singleton = function (v) {
-	return A2($zwilias$elm_rosetree$Tree$Tree, v, _List_Nil);
-};
 var $zwilias$elm_rosetree$Tree$tree = $zwilias$elm_rosetree$Tree$Tree;
+var $author$project$Main$node = function (v) {
+	return $zwilias$elm_rosetree$Tree$tree(
+		A2($author$project$Main$Label, v, false));
+};
+var $author$project$Main$leaf = function (v) {
+	return A2($author$project$Main$node, v, _List_Nil);
+};
 var $author$project$Main$t = A2(
-	$zwilias$elm_rosetree$Tree$tree,
-	A2($author$project$Main$Label, $author$project$Main$If, false),
-	A2(
-		$elm$core$List$map,
-		A2(
-			$elm$core$Basics$composeL,
-			$zwilias$elm_rosetree$Tree$singleton,
-			function (x) {
-				return A2($author$project$Main$Label, x, false);
-			}),
-		_List_fromArray(
-			[
-				$author$project$Main$Identifier('x'),
-				$author$project$Main$Identifier('y'),
-				$author$project$Main$Identifier('z')
-			])));
+	$author$project$Main$node,
+	$author$project$Main$Assignment,
+	_List_fromArray(
+		[
+			$author$project$Main$leaf(
+			$author$project$Main$Id('foo')),
+			A2(
+			$author$project$Main$node,
+			$author$project$Main$If,
+			_List_fromArray(
+				[
+					$author$project$Main$leaf(
+					$author$project$Main$Id('x')),
+					$author$project$Main$leaf(
+					$author$project$Main$Id('y')),
+					$author$project$Main$leaf(
+					$author$project$Main$Id('z'))
+				]))
+		]));
 var $author$project$Main$init = function (_v0) {
 	return _Utils_Tuple2(
 		$author$project$Main$Model(
@@ -6000,6 +6003,7 @@ var $elm$core$Maybe$andThen = F2(
 			return $elm$core$Maybe$Nothing;
 		}
 	});
+var $author$project$Main$Hole = {$: 'Hole'};
 var $zwilias$elm_rosetree$Tree$children = function (_v0) {
 	var c = _v0.b;
 	return c;
@@ -6225,12 +6229,29 @@ var $author$project$Main$doMove = F2(
 				moveZipper(
 					A2($author$project$Main$setSelected, false, zipper))));
 	});
+var $zwilias$elm_rosetree$Tree$Zipper$replaceTree = F2(
+	function (t, _v0) {
+		var zipper = _v0.a;
+		return $zwilias$elm_rosetree$Tree$Zipper$Zipper(
+			_Utils_update(
+				zipper,
+				{focus: t}));
+	});
 var $author$project$Main$doAction = F2(
 	function (model, action) {
-		var direction = action.a;
-		return $author$project$Main$Model(
-			A2($author$project$Main$doMove, model.zipper, direction));
+		if (action.$ === 'Move') {
+			var direction = action.a;
+			return $author$project$Main$Model(
+				A2($author$project$Main$doMove, model.zipper, direction));
+		} else {
+			return $author$project$Main$Model(
+				A2(
+					$zwilias$elm_rosetree$Tree$Zipper$replaceTree,
+					A2($author$project$Main$node, $author$project$Main$Hole, _List_Nil),
+					model.zipper));
+		}
 	});
+var $author$project$Main$Delete = {$: 'Delete'};
 var $author$project$Main$Down = {$: 'Down'};
 var $author$project$Main$Left = {$: 'Left'};
 var $author$project$Main$Move = function (a) {
@@ -6252,6 +6273,8 @@ var $author$project$Main$keyToAction = function (key) {
 		case 'j':
 			return $elm$core$Maybe$Just(
 				$author$project$Main$Move($author$project$Main$Down));
+		case 'd':
+			return $elm$core$Maybe$Just($author$project$Main$Delete);
 		default:
 			return $elm$core$Maybe$Nothing;
 	}
@@ -12114,6 +12137,7 @@ var $mdgriffith$elm_ui$Internal$Model$Text = function (a) {
 var $mdgriffith$elm_ui$Element$text = function (content) {
 	return $mdgriffith$elm_ui$Internal$Model$Text(content);
 };
+var $elm$core$Debug$toString = _Debug_toString;
 var $elm$core$Debug$todo = _Debug_todo;
 var $author$project$Main$render = function (tree) {
 	var tab = A2(
@@ -12153,62 +12177,111 @@ var $author$project$Main$render = function (tree) {
 					elements));
 		});
 	var children = $zwilias$elm_rosetree$Tree$children(tree);
-	return A2(
-		$mdgriffith$elm_ui$Element$el,
+	return A3(
+		grid,
 		style,
+		_List_fromArray(
+			[
+				$mdgriffith$elm_ui$Element$spacing(4)
+			]),
 		function () {
 			var _v0 = _Utils_Tuple2(label.value, children);
-			if (_v0.a.$ === 'If') {
-				if (((_v0.b.b && _v0.b.b.b) && _v0.b.b.b.b) && (!_v0.b.b.b.b.b)) {
-					var _v1 = _v0.a;
-					var _v2 = _v0.b;
-					var p = _v2.a;
-					var _v3 = _v2.b;
-					var x = _v3.a;
-					var _v4 = _v3.b;
-					var y = _v4.a;
-					return A3(
-						grid,
-						_List_Nil,
-						_List_fromArray(
+			_v0$4:
+			while (true) {
+				switch (_v0.a.$) {
+					case 'If':
+						if (((_v0.b.b && _v0.b.b.b) && _v0.b.b.b.b) && (!_v0.b.b.b.b.b)) {
+							var _v1 = _v0.a;
+							var _v2 = _v0.b;
+							var p = _v2.a;
+							var _v3 = _v2.b;
+							var x = _v3.a;
+							var _v4 = _v3.b;
+							var y = _v4.a;
+							return _List_fromArray(
+								[
+									_List_fromArray(
+									[
+										keyword('if'),
+										$author$project$Main$render(p),
+										keyword('then')
+									]),
+									_List_fromArray(
+									[
+										tab,
+										$author$project$Main$render(x)
+									]),
+									_List_fromArray(
+									[
+										keyword('else')
+									]),
+									_List_fromArray(
+									[
+										tab,
+										$author$project$Main$render(y)
+									])
+								]);
+						} else {
+							break _v0$4;
+						}
+					case 'Assignment':
+						if ((_v0.b.b && _v0.b.b.b) && (!_v0.b.b.b.b)) {
+							var _v5 = _v0.a;
+							var _v6 = _v0.b;
+							var name = _v6.a;
+							var _v7 = _v6.b;
+							var expression = _v7.a;
+							return _List_fromArray(
+								[
+									_List_fromArray(
+									[
+										$author$project$Main$render(name),
+										$mdgriffith$elm_ui$Element$text('=')
+									]),
+									_List_fromArray(
+									[
+										tab,
+										$author$project$Main$render(expression)
+									])
+								]);
+						} else {
+							break _v0$4;
+						}
+					case 'Id':
+						var s = _v0.a.a;
+						return _List_fromArray(
 							[
-								$mdgriffith$elm_ui$Element$spacing(4)
-							]),
-						_List_fromArray(
-							[
 								_List_fromArray(
 								[
-									keyword('if'),
-									$author$project$Main$render(p),
-									keyword('then')
-								]),
-								_List_fromArray(
-								[
-									tab,
-									$author$project$Main$render(x)
-								]),
-								_List_fromArray(
-								[
-									keyword('else')
-								]),
-								_List_fromArray(
-								[
-									tab,
-									$author$project$Main$render(y)
+									$mdgriffith$elm_ui$Element$text(s)
 								])
-							]));
-				} else {
-					return _Debug_todo(
-						'Main',
-						{
-							start: {line: 179, column: 17},
-							end: {line: 179, column: 27}
-						})('');
+							]);
+					default:
+						var _v8 = _v0.a;
+						return _List_fromArray(
+							[
+								_List_fromArray(
+								[
+									A2(
+									$mdgriffith$elm_ui$Element$el,
+									_List_fromArray(
+										[
+											$mdgriffith$elm_ui$Element$Background$color(
+											A3($mdgriffith$elm_ui$Element$rgb255, 255, 110, 110))
+										]),
+									$mdgriffith$elm_ui$Element$text('_'))
+								])
+							]);
 				}
-			} else {
-				var s = _v0.a.a;
-				return $mdgriffith$elm_ui$Element$text(s);
 			}
+			return _Debug_todo(
+				'Main',
+				{
+					start: {line: 192, column: 17},
+					end: {line: 192, column: 27}
+				})(
+				'Missing branch in render function: ' + $elm$core$Debug$toString(
+					_Utils_Tuple2(label.value, children)));
 		}());
 };
 var $zwilias$elm_rosetree$Tree$Zipper$firstSibling = function (zipper) {
